homework/5.kubernetes-network/portgres.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      hostNetwork: true
      serviceAccountName: postgres
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
      - image: postgres:15.4
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 1m
            memory: 4Mi
