homework/5.kubernetes-network/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      hostNetwork: true
      serviceAccountName: postgres
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
      - image: postgres:15.4
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 1m
            memory: 4Mi
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  name: redmine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: redmine
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      serviceAccountName: redmine
      containers:
      - image: redmine:5.0.6
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: redmine
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: redmine
            port:
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: redmine
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
