homework/5.kubernetes-network/redmine.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redmine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: redmine
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      serviceAccountName: redmine
      containers:
      - image: redmine:5.0.6
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: redmine
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: redmine
            port:
              number: 3000
